Adds note on Silberschatz in itgrund
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1950 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/studyguide/studyguide.tex
+++ b/studyguide/studyguide.tex
@@ -76,17 +76,26 @@ följande områden:
   \item avsnitten 9.1 och 9.2: databaser.
 \end{itemize}
 
+Två kapitel från Silberschatz bok \citetitle{Silberschatz2013intl} 
+\cite{Silberschatz2013intl,Silberschatz2013osc} kommer också att användas.
+Denna bok kommer att läsas i fullo i nästa kurs, som behandlar 
+operativsystemsteori.
+Denna bok är valfri att köpa nu, men det rekommenderas då ni ändå måste köpa 
+den senare.
+
+Värt att veta är att det finns två versioner, där den ena har tillägget 
+''International Student Edition'' i titeln \cite{Silberschatz2013intl}.
+Denna bok saknar kapitlen om distribuerade system och virtualisering.
+Dessa kapitel behandlas inte i någon kurs, men då de kan vara intressanta för 
+er vill jag göra er uppmärksamma på detta.
+
 Litteraturläsningen kompletteras av ett antal föreläsningar och övningar som 
 ges under kursens gång.
 Dessa kommer inte att vara heltäckande och för att förstå dem måste du läsa 
 litteraturen enligt anvisningarna nedan.
 
 Kursens lärandemål kommer att examineras med ett antal laborationer och 
-avslutas med ett mindre projekt.
-Detta projekt motsvaras av strax över två veckors heltidsarbete.
-Den som nyligen kommer från gymnasieskolan kan ha som referens att detta 
-motsvarar en något större omfattning än projektarbetet för gymnasieskolan, dock 
-med högre krav på innehållet.
+avslutas med en salstentamen.
 
 \subsection{Schema}
 \label{sec:schedule}
