Akutförändring av beamer för intro
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1971 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/intro/intro.tex
+++ b/lectures/intro/intro.tex
@@ -35,6 +35,8 @@
 	För att se en sammanfattning och kopia av licenstexten besök URL 
 	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
 }}
+\author{Jimmy Åhlander\footnote{
+}}
 \institute[MIUN ITM]{%
   %Department of Information and Communication Systems (ICS),\\
   %Mid Sweden University, Sundsvall.
@@ -86,10 +88,8 @@
     \item Det är de tillfällen som ligger i schemat som gäller!
   \end{itemize}
   \begin{itemize}
-    \item Daniel ger föreläsningar och håller övningarna, examinerar även 
-      projektetrapporten.
-    \item Alexandra och Tobias handleder laborationer och projekt, de rättar 
-      även laborationerna.
+    \item Jimmy Åhlander ger föreläsningar och håller övningarna. 
+    \item Jan-Erik Jonsson handleder och rättar laborationer.
   \end{itemize}
 \end{frame}
 
@@ -122,12 +122,12 @@
     \item L1 Terminalen
     \item L2 Programmering med Python
     \item L3 Datorn
+    \item L4 Presentationsteknik
   \end{itemize}
 \end{frame}
-\begin{frame}{Projekt}
+\begin{frame}{Tenta}
   \begin{itemize}
-    \item Projektrapport
-    \item Projektpresentation
+    \item Skriftlig tentamen
   \end{itemize}
 \end{frame}
 
