Corrects author field for itgrund intro lecture
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1974 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/intro/intro.tex
+++ b/lectures/intro/intro.tex
@@ -29,20 +29,20 @@
   datateknik och datavetenskap
 }
 \author{Daniel Bosk\footnote{%
-	\tiny
-	Detta verk är tillgängliggjort under licensen Creative Commons 
-	Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
-	För att se en sammanfattning och kopia av licenstexten besök URL 
-	\url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
-}}
-\author{Jimmy Åhlander\footnote{
-}}
-\institute[MIUN ITM]{%
+    \tiny
+    Detta verk är tillgängliggjort under licensen Creative Commons 
+    Erkännande-DelaLika 2.5 Sverige (CC BY-SA 2.5 SE).
+    För att se en sammanfattning och kopia av licenstexten besök URL 
+    \url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
+  } och
+  Jimmy Åhlander
+}
+\institute[MIUN IKS]{%
   %Department of Information and Communication Systems (ICS),\\
   %Mid Sweden University, Sundsvall.
 	%
-  Avdelningen för informations- och kommunikationssytem (IKS),\\
-  Mittuniversitetet, Sundsvall.
+  Avdelningen för informations- och kommunikationssytem,\\
+  Mittuniversitetet, SE-851\,70 Sundsvall.
 }
 \date{\svnId}
 
