Adds minor bugfixes
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@2197 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/install/install.tex
+++ b/labs/install/install.tex
@@ -10,7 +10,7 @@
 \usepackage{listings}
 \usepackage[today,nofancy]{svninfo}
 \usepackage{csquotes}
-\usepackage[natbib,style=numeric-comp,maxbibnames=99]{biblatex}
+\usepackage[natbib,style=numeric-comp,maxbibnames=99,backend=bibtexu]{biblatex}
 \addbibresource{literature.bib}
 \usepackage[varioref,prettyref,listings]{miunmisc}
 
