--- a/labs/python/python.tex
+++ b/labs/python/python.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper,nocourse]{miunasgn}
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage[english,swedish]{babel}
 \usepackage{csquotes}
 \usepackage[hyphens]{url}
@@ -8,7 +9,7 @@
 \usepackage{color}
 \usepackage{listings} 
 \usepackage{prettyref,varioref}
-\usepackage[natbib,style=numeric-comp,maxnames=99]{biblatex}
+\usepackage[natbib,style=numeric-comp,maxbibnames=99,backend=bibtexu]{biblatex}
 \addbibresource{literature.bib}
 \usepackage[listings,prettyref,varioref]{miunmisc}
 
