--- a/labs/terminal/terminal.tex
+++ b/labs/terminal/terminal.tex
@@ -2,6 +2,7 @@
 % Author:  Daniel Bosk <daniel.bosk@miun.se>
 \documentclass[a4paper,nocourse]{miunasgn}
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage[english,swedish]{babel}
 \usepackage[hyphens]{url}
 \usepackage{hyperref}
@@ -10,7 +11,7 @@
 \usepackage{color}
 \usepackage[today,nofancy]{svninfo}
 \usepackage{csquotes}
-\usepackage[natbib,style=numeric-comp,maxbibnames=99]{biblatex}
+\usepackage[natbib,style=numeric-comp,maxbibnames=99,backend=bibtexu]{biblatex}
 \addbibresource{literature.bib}
 \usepackage[varioref,prettyref,listings]{miunmisc}
 
